Added OTP and PIN functionality for login, user creation, and client registration - Introduced 4 new tables to the security database, and modified 2 existing tables (security_user & security_client_password_policy). - Created an SMS service for sending OTPs, along with a mock SMS service for cases where the API key is missing. - Added policies for OTP and PIN methods. - Before setting passwords and PINs, the respective policies are now being checked. - Moved policy classes to the policy package and created abstract policy classes to support most functionality.